argo-apps/ingress-argocd/ingress-argocd-svc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.dodex.site
    secretName: app-tls
  rules:
  - host: argocd.dodex.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: argocd-server
            port:
              number: 80
---
